force-app/main/default/objects/Pol_Com_Condition__c/fields/Abrev__c.field-meta.xml
<CustomField>
    <fullName>Abrev__c</fullName>
    <description>Short syntax</description>
    <inlineHelpText>Abréviation</inlineHelpText>
    <label>Abrev</label>
    <length>10</length>
    <type>Text</type>
</CustomField>