force-app/main/default/objects/Pol_Com_Condition__c/fields/Accounting_Document_Type_Balance__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Document_Type_Balance__c</fullName>
    <description>Select accounting document that should be used for condition end of year (meaning end of contract) closing (meaning accounting balance)</description>
    <inlineHelpText>Précisez le type de document de facturation de solde de la condition</inlineHelpText>
    <label>Balance Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Acc_Document_Type</valueSetName>
    </valueSet>
</CustomField>