force-app/main/default/objects/Pol_Com_Condition__c/fields/Accrual_Planning__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Planning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accrual Planning</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Accrual_Planning__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Pol_Com_Invoicing_Planning__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Accrual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pol_Com_Invoicing_Planning__c</referenceTo>
    <relationshipLabel>Conditions Tarifaires (Accrual Planning)</relationshipLabel>
    <relationshipName>Conditions_Tarifaires1</relationshipName>
    <type>Lookup</type>
</CustomField>