force-app/main/default/objects/Pol_Com_Condition__c/fields/Base_Calculation_Model__c.field-meta.xml
<CustomField>
    <fullName>Base_Calculation_Model__c</fullName>
    <label>Base Calculation Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calcualtion_method</valueSetName>
    </valueSet>
</CustomField>