force-app/main/default/objects/Pol_Com_Condition__c/fields/Base_Redistribution_Model__c.field-meta.xml
<CustomField>
    <fullName>Base_Redistribution_Model__c</fullName>
    <label>Base Redistribution Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Base_Redistribution_Model</valueSetName>
    </valueSet>
</CustomField>