force-app/main/default/objects/Pol_Com_Condition__c/fields/Brand_Type__c.field-meta.xml
<CustomField>
    <fullName>Brand_Type__c</fullName>
    <description>Allow to specify a limited allocation to contract having similar brand type</description>
    <inlineHelpText>Allow to specify a limited allocation to contract having similar brand type</inlineHelpText>
    <label>Brand Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Type</valueSetName>
    </valueSet>
</CustomField>