force-app/main/default/objects/Pol_Com_Condition__c/fields/BU_Source__c.field-meta.xml
<CustomField>
    <fullName>BU_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Orga_BU__c.Set_Com_Condition_BU_Source__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Conditions Tarifaires (BU Source)</relationshipLabel>
    <relationshipName>Conditions_Tarifaires_BU_Source</relationshipName>
    <type>Lookup</type>
</CustomField>