force-app/main/default/objects/Pol_Com_Condition__c/fields/Capture_Discount_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>Capture_Discount_Product_Level__c</fullName>
    <label>Capture Discount Product Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>From CPD only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>