force-app/main/default/objects/Pol_Com_Condition__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allow limited access of the condition to contract NS having similar category reference</description>
    <inlineHelpText>Sélectionnez si la condition s&apos;applique uniquement à certaines catégories de produits</inlineHelpText>
    <label>Category</label>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipLabel>Conditions Tarifaires</relationshipLabel>
    <relationshipName>Tarifs_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>