force-app/main/default/objects/Pol_Com_Condition__c/fields/Comment_Change_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Comment_Change_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if the user will have authorization to channge the default comment</description>
    <label>Comment Change Authorization</label>
    <type>Checkbox</type>
</CustomField>