force-app/main/default/objects/Pol_Com_Condition__c/fields/Comment_PE__c.field-meta.xml
<CustomField>
    <fullName>Comment_PE__c</fullName>
    <description>Comment use when the condition is calling in contract with Period Extention record type</description>
    <label>Comment PE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>