force-app/main/default/objects/Pol_Com_Condition__c/fields/Condition_Mode__c.field-meta.xml
<CustomField>
    <fullName>Condition_Mode__c</fullName>
    <description>Define the type (%,Unit amount, Fix amount) that will be authorized for this condition specifically</description>
    <inlineHelpText>Sélectionnez le ou les modes de calcul autorisés pour la condition</inlineHelpText>
    <label>Condition Mode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
                <default>true</default>
                <label>%</label>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>