force-app/main/default/objects/Pol_Com_Condition__c/fields/Condition_status__c.field-meta.xml
<CustomField>
    <fullName>Condition_status__c</fullName>
    <description>Current status of the condition</description>
    <inlineHelpText>Sélectionnez le statut de la condition</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In preparation</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>PreClosed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>