force-app/main/default/objects/Pol_Com_Condition__c/fields/Conditional_Slab_Method__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Slab_Method__c</fullName>
    <label>Conditional Slab Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Discount_Conditional_Slab_Method</valueSetName>
    </valueSet>
</CustomField>