force-app/main/default/objects/Pol_Com_Condition__c/fields/Default_Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Unit_Value__c</fullName>
    <label>Default Unit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>