force-app/main/default/objects/Pol_Com_Condition__c/fields/Definition_Change_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Definition_Change_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Give opportunity to the user to change or Not Definition in its Contract Condition row (False by default)</description>
    <label>Definition Change Authorization</label>
    <type>Checkbox</type>
</CustomField>