force-app/main/default/objects/Pol_Com_Condition__c/fields/Definition_N1_Lang2__c.field-meta.xml
<CustomField>
    <fullName>Definition_N1_Lang2__c</fullName>
    <label>Definition N1 Lang2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>