force-app/main/default/objects/Pol_Com_Condition__c/fields/Definition_P2__c.field-meta.xml
<CustomField>
    <fullName>Definition_P2__c</fullName>
    <description>Previous1 définition (should be loaded auto from definition_P1__c at the change year)</description>
    <label>Definition P2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>