force-app/main/default/objects/Pol_Com_Condition__c/fields/Duplication_Discount_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Duplication_Discount_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Create discount mapping for comparble condition on difféerent period</description>
    <label>Duplication Discount Mapping</label>
    <referenceTo>Pol_Com_Condition__c</referenceTo>
    <relationshipLabel>Conditions Tarifaires (Duplication Discount Mapping)</relationshipLabel>
    <relationshipName>Conditions_Tarifaires</relationshipName>
    <type>Lookup</type>
</CustomField>