force-app/main/default/objects/Pol_Com_Condition__c/fields/Gen_Defintion__c.field-meta.xml
<CustomField>
    <fullName>Gen_Defintion__c</fullName>
    <label>Defintion (generic)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>