force-app/main/default/objects/Pol_Com_Condition__c/fields/Gen_Name_com__c.field-meta.xml
<CustomField>
    <fullName>Gen_Name_com__c</fullName>
    <description>Generic commercial name</description>
    <inlineHelpText>Specify the Generic commercial name</inlineHelpText>
    <label>Commercial name (generic)</label>
    <type>TextArea</type>
</CustomField>