force-app/main/default/objects/Pol_Com_Condition__c/fields/Gen_Name_Fi__c.field-meta.xml
<CustomField>
    <fullName>Gen_Name_Fi__c</fullName>
    <description>Generic financial name</description>
    <inlineHelpText>Specify the Generic financial name</inlineHelpText>
    <label>Financial name (generic)</label>
    <type>TextArea</type>
</CustomField>