force-app/main/default/objects/Pol_Com_Condition__c/fields/Gen_Name_Leg__c.field-meta.xml
<CustomField>
    <fullName>Gen_Name_Leg__c</fullName>
    <description>Generic legal name</description>
    <inlineHelpText>Specify the Generic legal name</inlineHelpText>
    <label>Legal name (generic)</label>
    <type>TextArea</type>
</CustomField>