force-app/main/default/objects/Pol_Com_Condition__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Index1</fullName>
                <default>true</default>
                <label>Index1</label>
            </value>
            <value>
                <fullName>Index2</fullName>
            </value>
            <value>
                <fullName>Index3</fullName>
            </value>
            <value>
                <fullName>Index4</fullName>
            </value>
            <value>
                <fullName>Index5</fullName>
            </value>
            <value>
                <fullName>Index6</fullName>
            </value>
            <value>
                <fullName>Index7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>