force-app/main/default/objects/Pol_Com_Condition__c/fields/Invoicing_Planning_AMEND__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Planning_AMEND__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoicing Planning AMEND</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pol_Com_Invoicing_Planning__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pol_Com_Invoicing_Planning__c</referenceTo>
    <relationshipLabel>Conditions Tarifaires (Invoicing Planning AMEND)</relationshipLabel>
    <relationshipName>Conditions_Tarifaires3</relationshipName>
    <type>Lookup</type>
</CustomField>