force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_Conditional__c.field-meta.xml
<CustomField>
    <fullName>Is_Conditional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a conditionnal condition  (one or several slab)</description>
    <inlineHelpText>A cocher si la condition est avec palier</inlineHelpText>
    <label>Is Cond</label>
    <type>Checkbox</type>
</CustomField>