force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_Contract_Unicity_Requiered__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Unicity_Requiered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Follow unicity rules for this tariff condition in the contract</description>
    <inlineHelpText>A cocher pour avoir un code budget unique sur le contrat</inlineHelpText>
    <label>Is Contract Unicity Requiered</label>
    <type>Checkbox</type>
</CustomField>