force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_Folding_Discount__c.field-meta.xml
<CustomField>
    <fullName>Is_Folding_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discount is used to make a value about folding calculation (= compensate depreciation rate impact on like for like deals)</description>
    <label>Is Folding Discount</label>
    <type>Checkbox</type>
</CustomField>