force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_Free_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Is_Free_Product_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A cocher pour préciser qu&apos;il s&apos;agit d&apos;une remise de type produits gratuits</inlineHelpText>
    <label>Is Free Product Discount</label>
    <type>Checkbox</type>
</CustomField>