force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_Index_Target__c.field-meta.xml
<CustomField>
    <fullName>Is_Index_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Index Target</label>
    <type>Checkbox</type>
</CustomField>