force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_InvoicingPlanning_AME_Series_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Is_InvoicingPlanning_AME_Series_ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If check, user will ne not able to change the loaded default value for AMENDEMENT</description>
    <inlineHelpText>If check, user will ne not able to change the loaded default value for AMENDEMENT</inlineHelpText>
    <label>Is InvoicingPlanning AME Series ReadOnly</label>
    <type>Checkbox</type>
</CustomField>