force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_InvoicingPlanning_PT_Series_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Is_InvoicingPlanning_PT_Series_ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is InvoicingPlanning PT Series ReadOnly</label>
    <type>Checkbox</type>
</CustomField>