force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_NetPrice_Statement_Condition__c.field-meta.xml
<CustomField>
    <fullName>Is_NetPrice_Statement_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NetPrice Statement Condition</label>
    <type>Checkbox</type>
</CustomField>