force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_Required_SubRate_Statement__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_SubRate_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required SubRate Statement</label>
    <type>Checkbox</type>
</CustomField>