force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_Tariff_Condition__c.field-meta.xml
<CustomField>
    <fullName>Is_Tariff_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This condition will be used for Cost Price (Tariff) to Invoice price (Net) waterfall calculation</description>
    <label>Is Tariff Condition</label>
    <type>Checkbox</type>
</CustomField>