force-app/main/default/objects/Pol_Com_Condition__c/fields/Is_Valid_ByDefault__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_ByDefault__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The condition should be cheked as Valid by default</description>
    <label>Is Valid By Default</label>
    <type>Checkbox</type>
</CustomField>