force-app/main/default/objects/Pol_Com_Condition__c/fields/JV__c.field-meta.xml
<CustomField>
    <fullName>JV__c</fullName>
    <label>JV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JV1</fullName>
            </value>
            <value>
                <fullName>JV2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>