force-app/main/default/objects/Pol_Com_Condition__c/fields/Legal_Template_Clause_Reference__c.field-meta.xml
<CustomField>
    <fullName>Legal_Template_Clause_Reference__c</fullName>
    <label>Legal Template Clause Reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clause1</fullName>
            </value>
            <value>
                <fullName>Clause2</fullName>
            </value>
            <value>
                <fullName>Clause3</fullName>
            </value>
            <value>
                <fullName>Clause4</fullName>
            </value>
            <value>
                <fullName>Clause5</fullName>
            </value>
            <value>
                <fullName>Clause6</fullName>
            </value>
            <value>
                <fullName>Clause7</fullName>
            </value>
            <value>
                <fullName>Clause8</fullName>
            </value>
            <value>
                <fullName>Clause9</fullName>
            </value>
            <value>
                <fullName>Clause10</fullName>
            </value>
            <value>
                <fullName>Clause11</fullName>
            </value>
            <value>
                <fullName>Clause12</fullName>
            </value>
            <value>
                <fullName>Clause13</fullName>
            </value>
            <value>
                <fullName>Clause14</fullName>
            </value>
            <value>
                <fullName>Clause15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>