force-app/main/default/objects/Pol_Com_Condition__c/fields/Legal_Template_Type_Presence__c.field-meta.xml
<CustomField>
    <fullName>Legal_Template_Type_Presence__c</fullName>
    <label>Legal Template Type Presence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General_Sales_Conditions</fullName>
            </value>
            <value>
                <fullName>Particular_Sales_Conditions</fullName>
            </value>
            <value>
                <fullName>Supply_Chain_Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>