force-app/main/default/objects/Pol_Com_Condition__c/fields/LimitUsage_ToProfile__c.field-meta.xml
<CustomField>
    <fullName>LimitUsage_ToProfile__c</fullName>
    <label>Limit Usage To Profile</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>