force-app/main/default/objects/Pol_Com_Condition__c/fields/Master_BU__c.field-meta.xml
<CustomField>
    <fullName>Master_BU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specify a conditions list defined by BU</description>
    <inlineHelpText>Specify a conditions list defined by BU</inlineHelpText>
    <label>Master Business Unit</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Master_BU__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Orga_BU__c.Set_Com_Condition_Master_BU__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Conditions Tarifaires (Master Business Unit)</relationshipLabel>
    <relationshipName>Conditions_Tarifaires</relationshipName>
    <type>Lookup</type>
</CustomField>