force-app/main/default/objects/Pol_Com_Condition__c/fields/Name_Com__c.field-meta.xml
<CustomField>
    <fullName>Name_Com__c</fullName>
    <description>Client ommercial name of the condition</description>
    <inlineHelpText>Précisez le nom de la condition tel qu&apos;il doit apparaître dans les documents commerciaux</inlineHelpText>
    <label>Company commercial name</label>
    <type>TextArea</type>
</CustomField>