force-app/main/default/objects/Pol_Com_Condition__c/fields/Name_Fi__c.field-meta.xml
<CustomField>
    <fullName>Name_Fi__c</fullName>
    <description>Financial name of the condition</description>
    <inlineHelpText>Précisez le nom de la condition tel qu&apos;il doit apparaître dans les documents financiers</inlineHelpText>
    <label>Company financial name</label>
    <type>TextArea</type>
</CustomField>